# fritzcallindicator

./: CMakeLists.txt  Doxyfile  README.md  callmonitor.h  fritzbox.cpp  fritzbox.h  fritzcallindicator.cpp  fritzcallindicator.h  fritzcallindicator.pro  fritzphonebook.cpp  fritzphonebook.h  fritzsoap.cpp  fritzsoap.h  main.cpp  numberresolver.cpp  numberresolver.h  onlineresolvers.cpp  onlineresolvers.h  settings.cpp  settings.h  settings.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  tbaddressbook.cpp  tbaddressbook.h
.github/workflows/: ci.yml  codeql-analysis.yml  windows.yml
data/: country_codes.csv  data.qrc  win.rc
data/area_codes/: 0049_DE.csv
data/icons/: COPYING-ICONS
data/mac/: Info.plist
data/online_resolvers/: das_oertliche.conf  gelbe_seiten.conf
data/unix/: com.github.elth0r0.fritzcallindicator.desktop  com.github.elth0r0.fritzcallindicator.metainfo.xml
icons/: icon.icns
lang/: fritzcallindicator_de.qm  fritzcallindicator_de.ts  fritzcallindicator_en.ts  translations.qrc
packaging/debian/: changelog  control  copyright  rules  watch
packaging/debian_OBS/: changelog  fritzcallindicator.dsc
packaging/rpm/: fritzcallindicator.changes  fritzcallindicator.spec
packaging/windows/: ReadMe.txt  fritzcallindicator.nsi  removeprevious.nsh
src/: CMakeLists.txt  callmonitor.cpp  callmonitor.h  fritzcallindicator.cpp  fritzcallindicator.h  fritzsoap.cpp  fritzsoap.h  main.cpp  numberresolver.cpp  numberresolver.h  onlineresolvers.cpp  onlineresolvers.h  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/phonebooks/: CMakeLists.txt  carddav.cpp  carddav.h  fritzphonebook.cpp  fritzphonebook.h  tbaddressbook.cpp  tbaddressbook.h  thunderbird.cpp  thunderbird.h
